# isogenies-lib

./: .gitignore  Cargo.toml  README.md  sample.txt  strategy.py
benches/: bench.rs  bench_util.rs  benchmark.rs  fp2_bench.rs  msi.rs
sage/: README.md  endomorphism.py  montgomery.py  precompute.sage  sqisign_parameters.txt
sage/finite_fields/: gen_fp.sage  mkfp.sage
sage/utilities/: order.py  origin.txt  supersingular.py
src/: error.rs  fields.rs  lib.rs  util.rs
src/ec/: ec_helpers.rs  eccore.rs  mod.rs  mp.rs
src/finitefield/: fp2_gen.rs  fp_gen.rs
src/linalg/: kernel.rs  matrix.rs  mod.rs
src/quaternion/: cornacchia.rs  dim2.rs  klpt.rs  lattice.rs  mod.rs  param.rs  quadratic_ideal.rs  quadratic_order.rs  quaternion_algebra.rs  quaternion_ideal.rs  quaternion_order.rs
src/schemes/: klapoti.rs  klapoti_test.rs  lit_sigamal.rs  lit_sigamal_test.rs  mod.rs  precomputed.json  sqisign_test.rs
src/theta/: mod.rs  theta.rs
