[package]
name = "isogenies-lib"
version = "0.1.0"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.test]
opt-level = 3
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.0"
ark-std = "0.4.0"
ark-test-curves = "0.4.0"
hex = "0.4.3"
num-bigint = { version = "0.4", features = ["rand"] }
num = "0.4"
rand_core = "0.6"
sha2 = "0.10.2"
sha3 = "0.10.6"
num-traits = "0.2.17"
rand = "0.8.5"
num-prime = {version = "0.4.3", features = ["big-int"]}
num-modular = { version = "0.6", features = ["num-bigint", "num-integer", "num-traits"] }
bitvec = "1.0.1"
thiserror = "1.0.59"
anyhow = "1.0.82"
rug = {version = "1.24.1", features = ["num-traits"]}
gmp-mpfr-sys = "1.0.1"
serde = "1.0.215"
serde_json = "1.0.133"
rand_chacha = "0.3.1"

[dependencies.num-integer]
default-features = false
features = ["i128"]
version = "0.1.42"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "msi"
path = "benches/msi.rs"
harness = false

# [[bench]]
# name = "benchmark"
# path = "benches/benchmark.rs"
# harness = false

# [[bench]]
# name = "benchmark"
# path = "benches/bench.rs"
# harness = false



